[package]
name = "kaslc"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
indicatif = "0.18.4"
kasl-core = { git = "https://github.com/hatya-mouse/kasl-core" }
kasl-cranelift-backend = { git = "https://github.com/hatya-mouse/kasl-cranelift-backend", version = "0.1.0" }
owo-colors = "4.3.0"
rust-embed = "8.11.0"
toml = "1.0.7"
