[package]
name = "kaslc"
version = "0.2.12"
edition = "2024"
license = "Apache-2.0"
description = "A command-line tool to compile and run kasl programs."
homepage = "https://kasl.hatya.dev"
repository = "https://github.com/hatya-mouse/kaslc"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
indicatif = "0.18.4"
kasl = { version = "0.2.11", features = ["cranelift"] }
owo-colors = "4.3.0"
rust-embed = "8.11.0"
toml = "1.0.7"

[[bin]]
name = "kaslc"
path = "src/main.rs"
